# geo

./: README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
YAML/: agents.yaml  inputs.yaml  tasks.yaml
app/: layout.tsx  page.tsx
app/app/: page.tsx
components/home/: content-form.tsx  custom-breadcrumbs.tsx  icp-with-popover.tsx  paste-content.tsx  paste-icp.tsx  person-background.tsx
components/icons/: person.tsx  slash.tsx
components/layout/: footer.tsx  navbar.tsx
components/shared/icons/: fluency.tsx  index.tsx  loading-dots.tsx
nemotron/: README.md  main.py  pyproject.toml  server.py
server/: main.ts  scoring_instructions.yaml
