[project]
name = "nemotron"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.15",
    "datasets>=3.6.0",
    "flask>=3.1.1",
    "huggingface-hub[cli]>=0.33.2",
    "sentence-transformers>=5.0.0",
    "transformers>=4.53.1",
]
